sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:26: error: missing argument list for method getCouleurJoueur in class BaseballEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getCouleurJoueur _` or `getCouleurJoueur(_,_)` instead of `getCouleurJoueur`.
  var baseBuggle = getCouleurJoueur
                   ^